Tweak logo sizing and positioning for splash page.

--- a/splash/index.html
+++ b/splash/index.html
@@ -144,7 +144,7 @@
         <div class="container team">
           <div class="team-member col s12 m6 l4">
             <div class="team-member-photo">
-              <img src="photos/josh.jpg" />
+              <img src="photos/josh.jpg" className="responsive-img" />
             </div>
             <div class="team-member-name">Josh Riesenbach</div>
             <div class="team-member-role">Product Owner, Full-Stack Developer</div>
@@ -158,21 +158,21 @@
           </div>
           <div class="team-member col s12 m6 l4">
             <div class="team-member-photo">
-              <img src="photos/jisoo.jpg" />
+              <img src="photos/jisoo.jpg" className="responsive-img" />
             </div>
             <div class="team-member-name">Jisoo Yoon</div>
             <div class="team-member-role">Full-Stack Developer</div>
           </div>
           <div class="team-member col s12 m6 l4">
             <div class="team-member-photo">
-              <img src="photos/calvin.png" />
+              <img src="photos/calvin.png" className="responsive-img" />
             </div>
             <div class="team-member-name">Calvin Le</div>
             <div class="team-member-role">Full-Stack Developer</div>
           </div>
           <div class="team-member col s12 m6 l4">
             <div class="team-member-photo">
-              <img src="photos/neil.jpg" />
+              <img src="photos/neil.jpg" className="responsive-img" />
             </div>
             <div class="team-member-name">Neil Murphy</div>
             <div class="team-member-role">Full-Stack Developer</div>
@@ -194,7 +194,7 @@
         <div class="container tech">
           <div class="tech col s12 m6 l4">
             <div class="tech-logo">
-              <img src="logos/react.png" alt="React"/>
+              <img src="logos/react.png" className="responsive-img" alt="React"/>
             </div>
             <div class="tech-name">
               React.js
@@ -203,7 +203,7 @@
 
           <div class="tech col s12 m6 l4">
             <div class="tech-logo">
-              <img src="logos/express.png" alt="Express.js"/>
+              <img src="logos/express.png" className="responsive-img" alt="Express.js"/>
             </div>
             <div class="tech-name">
               Express.js
@@ -212,7 +212,7 @@
 
           <div class="tech col s12 m6 l4">
             <div class="tech-logo">
-              <img src="logos/node.png" alt="Node.js"/>
+              <img src="logos/node.png" className="responsive-img" alt="Node.js"/>
             </div>
             <div class="tech-name">
               Node.js
@@ -221,7 +221,7 @@
 
           <div class="tech col s12 m6 l4">
             <div class="tech-logo">
-              <img src="logos/aws.png" alt="Amazon Web Services"/>
+              <img src="logos/aws.png" className="responsive-img" alt="Amazon Web Services"/>
             </div>
             <div class="tech-name">
               Amazon Web Services
@@ -230,7 +230,7 @@
 
           <div class="tech col s12 m6 l4">
             <div class="tech-logo">
-              <img src="logos/dynamodb.png" alt="DynamoDB"/>
+              <img src="logos/dynamodb.png" className="responsive-img" alt="DynamoDB"/>
             </div>
             <div class="tech-name">
               Amazon DynamoDB
@@ -239,7 +239,7 @@
 
           <div class="tech col s12 m6 l4">
             <div class="tech-logo">
-              <img src="logos/docker.png" alt="Docker"/>
+              <img src="logos/docker.png" className="responsive-img" alt="Docker"/>
             </div>
             <div class="tech-name">
               Docker
@@ -248,7 +248,7 @@
 
           <div class="tech col s12 m6 l4">
             <div class="tech-logo">
-              <img src="logos/socket-io.png" alt="Socket.IO"/>
+              <img src="logos/socket-io.png" className="responsive-img" alt="Socket.IO"/>
             </div>
             <div class="tech-name">
               Socket.IO
@@ -257,7 +257,7 @@
 
           <div class="tech col s12 m6 l4">
             <div class="tech-logo">
-              <img src="logos/googlemaps.png" alt="Google Maps API"/>
+              <img src="logos/googlemaps.png" className="responsive-img" alt="Google Maps API"/>
             </div>
             <div class="tech-name">
               Google Maps API
@@ -266,16 +266,7 @@
 
           <div class="tech col s12 m6 l4">
             <div class="tech-logo">
-              <img src="logos/materialize.jpg" alt="Materialize"/>
-            </div>
-            <div class="tech-name">
-              Materialize
-            </div>
-          </div>
-
-          <div class="tech col s12 m6 l4">
-            <div class="tech-logo">
-              <img src="logos/sass.png" alt="SASS"/>
+              <img src="logos/sass.png" className="responsive-img" alt="SASS"/>
             </div>
             <div class="tech-name">
               SASS
@@ -284,7 +275,7 @@
 
           <div class="tech col s12 m6 l4">
             <div class="tech-logo">
-              <img src="logos/travis.png" alt="Travis-CI"/>
+              <img src="logos/travis.png" className="responsive-img" alt="Travis-CI"/>
             </div>
             <div class="tech-name">
               Travis-CI
@@ -293,7 +284,7 @@
 
           <div class="tech col s12 m6 l4">
             <div class="tech-logo">
-              <img src="logos/mocha.png" alt="Mocha"/>
+              <img src="logos/mocha.png" className="responsive-img" alt="Mocha"/>
             </div>
             <div class="tech-name">
               Mocha
@@ -302,7 +293,7 @@
 
           <div class="tech col s12 m6 l4">
             <div class="tech-logo">
-              <img src="logos/chai.png" alt="Chai"/>
+              <img src="logos/chai.png" className="responsive-img" alt="Chai"/>
             </div>
             <div class="tech-name">
               Chai
@@ -311,7 +302,7 @@
 
           <div class="tech col s12 m6 l4">
             <div class="tech-logo">
-              <img src="logos/phantomjs.png" alt="PhantomJS"/>
+              <img src="logos/phantomjs.png" className="responsive-img" alt="PhantomJS"/>
             </div>
             <div class="tech-name">
               PhantomJS
