Add marked up photos for splash page tutorials.

--- a/splash/index.html
+++ b/splash/index.html
@@ -79,16 +79,16 @@
                 <div class="slider">
                   <ul class="slides">
                     <li>
-                      <img src="photos/ios1.png">
+                      <img src="photos/ios1m.png">
                     </li>
                     <li>
-                      <img src="photos/ios2.png">
+                      <img src="photos/ios2m.png">
                     </li>
                     <li>
-                      <img src="photos/ios3.png">
+                      <img src="photos/ios3m.png">
                     </li>
                     <li>
-                      <img src="photos/ios4.png">
+                      <img src="photos/ios4m.png">
                     </li>
                   </ul>
                 </div>
@@ -106,16 +106,16 @@
               <div class="slider">
                 <ul class="slides">
                   <li>
-                    <img src="photos/ios1.png">
+                    <img src="photos/android1m.png">
                   </li>
                   <li>
-                    <img src="photos/ios2.png">
+                    <img src="photos/android2m.png">
                   </li>
                   <li>
-                    <img src="photos/ios3.png">
+                    <img src="photos/android3m.png">
                   </li>
                   <li>
-                    <img src="photos/ios4.png">
+                    <img src="photos/android4m.png">
                   </li>
                 </ul>
               </div>
