(style) style navbar active border when navbar button is clicked

--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
   </head>
-  <body>
+  <body onhashchange="navbar.activate()">
     <div id='app-container'>
       This app relies on JavaScript to run. If you're seeing this, it means you have JavaScript disabled. It's okay. We won't judge you. You just can't use our app!
     </div>
