Adds warning message to large display devices

--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,6 @@
       This app relies on JavaScript to run. If you're seeing this, it means you have JavaScript disabled. It's okay. We won't judge you. You just can't use our app!
     </div>
     <div id='nav-container' />
-    <div id='display-warning' />
     <script type="text/javascript" src="/controllers/MapController.js"></script>
     <script type="text/javascript" src="/controllers/TimeController.js"></script>
     <script type="text/javascript" src="/controllers/LocationController.js"></script>
@@ -46,6 +45,7 @@
     <script type="text/javascript" src="/dist/src/components/Toast.js"></script>
     <script type="text/javascript" src="/dist/src/components/ChatCard.js"></script>
     <script type="text/javascript" src="/dist/src/components/DirectionsLink.js"></script>
+    <script type="text/javascript" src="/dist/src/views/ScreenSizeWarning.js"></script>
     <script type="text/javascript" src="/dist/src/views/SpotView.js"></script>
     <script type="text/javascript" src="/dist/src/views/MapView.js"></script>
     <script type="text/javascript" src="/dist/src/views/FeedView.js"></script>
