--- a/tests/reactTests.html
+++ b/tests/reactTests.html
@@ -41,6 +41,7 @@
     <script src="../client/dist/src/components/Toast.js"></script>
     <script src="../client/dist/src/components/DirectionsLink.js"></script>
     <script src="../client/dist/src/components/ChatCard.js"></script>
+    <script src="../client/dist/src/views/ScreenSizeWarning.js"></script>
     <script src="../client/dist/src/views/SpotView.js"></script>
     <script src="../client/dist/src/views/MapView.js"></script>
     <script src="../client/dist/src/views/FeedView.js"></script>
