(fix) crops michelle's image to be square

--- a/splash/index.html
+++ b/splash/index.html
@@ -151,7 +151,7 @@
           </div>
           <div class="team-member col s12 m6 l4">
             <div class="team-member-photo">
-              <img src="photos/michelle.png" />
+              <img src="photos/michelle.jpeg" />
             </div>
             <div class="team-member-name">Michelle Thorsell</div>
             <div class="team-member-role">Scrum Master, Full-Stack Developer</div>
