(fix) tech stack images are square and centered

--- a/splash/index.html
+++ b/splash/index.html
@@ -144,7 +144,7 @@
         <div class="container team">
           <div class="team-member col s12 m6 l4">
             <div class="team-member-photo">
-              <img src="photos/josh.jpg" className="responsive-img" />
+              <img src="photos/josh.jpg" class="responsive-img" />
             </div>
             <div class="team-member-name">Josh Riesenbach</div>
             <div class="team-member-role">Product Owner, Full-Stack Developer</div>
@@ -158,21 +158,21 @@
           </div>
           <div class="team-member col s12 m6 l4">
             <div class="team-member-photo">
-              <img src="photos/jisoo.jpg" className="responsive-img" />
+              <img src="photos/jisoo.jpg" class="responsive-img" />
             </div>
             <div class="team-member-name">Jisoo Yoon</div>
             <div class="team-member-role">Full-Stack Developer</div>
           </div>
           <div class="team-member col s12 m6 l4">
             <div class="team-member-photo">
-              <img src="photos/calvin.png" className="responsive-img" />
+              <img src="photos/calvin.png" class="responsive-img" />
             </div>
             <div class="team-member-name">Calvin Le</div>
             <div class="team-member-role">Full-Stack Developer</div>
           </div>
           <div class="team-member col s12 m6 l4">
             <div class="team-member-photo">
-              <img src="photos/neil.jpg" className="responsive-img" />
+              <img src="photos/neil.jpg" class="responsive-img" />
             </div>
             <div class="team-member-name">Neil Murphy</div>
             <div class="team-member-role">Full-Stack Developer</div>
@@ -193,8 +193,8 @@
       <div class="row">
         <div class="container tech">
           <div class="tech col s12 m6 l4">
-            <div class="tech-logo">
-              <img src="logos/react.png" className="responsive-img" alt="React"/>
+            <div class="square">
+              <img src="logos/react.png" class="responsive-img" alt="React"/>
             </div>
             <div class="tech-name">
               React.js
@@ -202,8 +202,8 @@
           </div>
 
           <div class="tech col s12 m6 l4">
-            <div class="tech-logo">
-              <img src="logos/express.png" className="responsive-img" alt="Express.js"/>
+            <div class="square">
+              <img src="logos/express.png" class="responsive-img" alt="Express.js"/>
             </div>
             <div class="tech-name">
               Express.js
@@ -211,8 +211,8 @@
           </div>
 
           <div class="tech col s12 m6 l4">
-            <div class="tech-logo">
-              <img src="logos/node.png" className="responsive-img" alt="Node.js"/>
+            <div class="square">
+              <img src="logos/node.png" class="responsive-img" alt="Node.js"/>
             </div>
             <div class="tech-name">
               Node.js
@@ -220,8 +220,8 @@
           </div>
 
           <div class="tech col s12 m6 l4">
-            <div class="tech-logo">
-              <img src="logos/aws.png" className="responsive-img" alt="Amazon Web Services"/>
+            <div class="square">
+              <img src="logos/aws.png" class="responsive-img" alt="Amazon Web Services"/>
             </div>
             <div class="tech-name">
               Amazon Web Services
@@ -229,8 +229,8 @@
           </div>
 
           <div class="tech col s12 m6 l4">
-            <div class="tech-logo">
-              <img src="logos/dynamodb.png" className="responsive-img" alt="DynamoDB"/>
+            <div class="square">
+              <img src="logos/dynamodb.png" class="responsive-img" alt="DynamoDB"/>
             </div>
             <div class="tech-name">
               Amazon DynamoDB
@@ -238,8 +238,8 @@
           </div>
 
           <div class="tech col s12 m6 l4">
-            <div class="tech-logo">
-              <img src="logos/docker.png" className="responsive-img" alt="Docker"/>
+            <div class="square">
+              <img src="logos/docker.png" class="responsive-img" alt="Docker"/>
             </div>
             <div class="tech-name">
               Docker
@@ -247,8 +247,8 @@
           </div>
 
           <div class="tech col s12 m6 l4">
-            <div class="tech-logo">
-              <img src="logos/socket-io.png" className="responsive-img" alt="Socket.IO"/>
+            <div class="square">
+              <img src="logos/socket-io.png" class="responsive-img" alt="Socket.IO"/>
             </div>
             <div class="tech-name">
               Socket.IO
@@ -256,8 +256,8 @@
           </div>
 
           <div class="tech col s12 m6 l4">
-            <div class="tech-logo">
-              <img src="logos/googlemaps.png" className="responsive-img" alt="Google Maps API"/>
+            <div class="square">
+              <img src="logos/googlemaps.png" class="responsive-img" alt="Google Maps API"/>
             </div>
             <div class="tech-name">
               Google Maps API
@@ -265,8 +265,8 @@
           </div>
 
           <div class="tech col s12 m6 l4">
-            <div class="tech-logo">
-              <img src="logos/sass.png" className="responsive-img" alt="SASS"/>
+            <div class="square">
+              <img src="logos/sass.png" class="responsive-img" alt="SASS"/>
             </div>
             <div class="tech-name">
               SASS
@@ -274,8 +274,8 @@
           </div>
 
           <div class="tech col s12 m6 l4">
-            <div class="tech-logo">
-              <img src="logos/travis.png" className="responsive-img" alt="Travis-CI"/>
+            <div class="square">
+              <img src="logos/travis.png" class="responsive-img" alt="Travis-CI"/>
             </div>
             <div class="tech-name">
               Travis-CI
@@ -283,8 +283,8 @@
           </div>
 
           <div class="tech col s12 m6 l4">
-            <div class="tech-logo">
-              <img src="logos/mocha.png" className="responsive-img" alt="Mocha"/>
+            <div class="square">
+              <img src="logos/mocha.png" class="responsive-img" alt="Mocha"/>
             </div>
             <div class="tech-name">
               Mocha
@@ -292,8 +292,8 @@
           </div>
 
           <div class="tech col s12 m6 l4">
-            <div class="tech-logo">
-              <img src="logos/chai.png" className="responsive-img" alt="Chai"/>
+            <div class="square">
+              <img src="logos/chai.png" class="responsive-img" alt="Chai"/>
             </div>
             <div class="tech-name">
               Chai
@@ -301,8 +301,8 @@
           </div>
 
           <div class="tech col s12 m6 l4">
-            <div class="tech-logo">
-              <img src="logos/phantomjs.png" className="responsive-img" alt="PhantomJS"/>
+            <div class="square">
+              <img src="logos/phantomjs.png" class="responsive-img" alt="PhantomJS"/>
             </div>
             <div class="tech-name">
               PhantomJS
@@ -375,6 +375,12 @@
 
     </main>
     <script>
+      var makeSquares = function () {
+        $('.square').height(function(i) {
+          return $($('.square')[i]).width();
+        });
+      }
+
       $(document).ready(function(){
         $('.parallax').parallax();
         $('.slider').slider({height: 667});
@@ -384,7 +390,10 @@
           in_duration: 300, // Transition in duration
           out_duration: 200 // Transition out duration
         });
+        makeSquares();
       });
+
+      $(window).resize(makeSquares);
     </script>
   </body>
 </html>
