Switch tutorial markup to inverted tint. Updates Neil's profile pic for Team section.

--- a/splash/index.html
+++ b/splash/index.html
@@ -79,16 +79,16 @@
                 <div class="slider">
                   <ul class="slides">
                     <li>
-                      <img src="photos/ios1m.png">
+                      <img src="photos/ios1.png">
                     </li>
                     <li>
-                      <img src="photos/ios2m.png">
+                      <img src="photos/ios2.png">
                     </li>
                     <li>
-                      <img src="photos/ios3m.png">
+                      <img src="photos/ios3.png">
                     </li>
                     <li>
-                      <img src="photos/ios4m.png">
+                      <img src="photos/ios4.png">
                     </li>
                   </ul>
                 </div>
@@ -106,16 +106,16 @@
               <div class="slider">
                 <ul class="slides">
                   <li>
-                    <img src="photos/android1m.png">
+                    <img src="photos/android1.png">
                   </li>
                   <li>
-                    <img src="photos/android2m.png">
+                    <img src="photos/android2.png">
                   </li>
                   <li>
-                    <img src="photos/android3m.png">
+                    <img src="photos/android3.png">
                   </li>
                   <li>
-                    <img src="photos/android4m.png">
+                    <img src="photos/android4.png">
                   </li>
                 </ul>
               </div>
@@ -172,7 +172,7 @@
           </div>
           <div class="team-member col s12 m6 l4">
             <div class="team-member-photo">
-              <img src="photos/neil.jpg" class="responsive-img" />
+              <img src="photos/neil.png" className="responsive-img" />
             </div>
             <div class="team-member-name">Neil Murphy</div>
             <div class="team-member-role">Full-Stack Developer</div>
