Swaps out logos for splash page.

--- a/splash/index.html
+++ b/splash/index.html
@@ -221,6 +221,15 @@
 
           <div class="tech col s12 m6 l4">
             <div class="square">
+              <img src="logos/jquery.gif" class="responsive-img" alt="jQuery"/>
+            </div>
+            <div class="tech-name">
+              jQuery
+            </div>
+          </div>
+
+          <div class="tech col s12 m6 l4">
+            <div class="square">
               <img src="logos/aws.png" class="responsive-img" alt="Amazon Web Services"/>
             </div>
             <div class="tech-name">
@@ -248,7 +257,7 @@
 
           <div class="tech col s12 m6 l4">
             <div class="square">
-              <img src="logos/socket-io.png" class="responsive-img" alt="Socket.IO"/>
+              <img src="logos/socket-io.gif" class="responsive-img" alt="Socket.IO"/>
             </div>
             <div class="tech-name">
               Socket.IO
@@ -275,10 +284,28 @@
 
           <div class="tech col s12 m6 l4">
             <div class="square">
-              <img src="logos/travis.png" class="responsive-img" alt="Travis-CI"/>
+              <img src="logos/travisci.png" class="responsive-img" alt="Travis-CI"/>
             </div>
             <div class="tech-name">
               Travis-CI
+            </div>
+          </div>
+
+          <div class="tech col s12 m6 l4">
+            <div class="square">
+              <img src="logos/gulp.jpg" class="responsive-img" alt="Gulp"/>
+            </div>
+            <div class="tech-name">
+              Gulp
+            </div>
+          </div>
+
+          <div class="tech col s12 m6 l4">
+            <div class="square">
+              <img src="logos/jwt.png" class="responsive-img" alt="JWT"/>
+            </div>
+            <div class="tech-name">
+              JWT
             </div>
           </div>
 
