Make team photos links.

--- a/splash/index.html
+++ b/splash/index.html
@@ -142,41 +142,51 @@
 
       <div class="row">
         <div class="container team">
-          <div class="team-member col s12 m6 l4">
-            <div class="team-member-photo">
-              <img src="photos/josh.jpg" class="responsive-img" />
+          <a href="http://github.com/jedijashwa">
+            <div class="team-member col s12 m6 l4">
+              <div class="team-member-photo">
+                <img src="photos/josh.jpg" class="responsive-img" />
+              </div>
+              <div class="team-member-name">Josh Riesenbach</div>
+              <div class="team-member-role">Product Owner, Full-Stack Developer</div>
             </div>
-            <div class="team-member-name">Josh Riesenbach</div>
-            <div class="team-member-role">Product Owner, Full-Stack Developer</div>
-          </div>
-          <div class="team-member col s12 m6 l4">
-            <div class="team-member-photo">
-              <img src="photos/michelle.jpeg" />
+          </a>
+          <a href="http://github.com/MThorsell">
+            <div class="team-member col s12 m6 l4">
+              <div class="team-member-photo">
+                <img src="photos/michelle.jpeg" />
+              </div>
+              <div class="team-member-name">Michelle Thorsell</div>
+              <div class="team-member-role">Scrum Master, Full-Stack Developer</div>
             </div>
-            <div class="team-member-name">Michelle Thorsell</div>
-            <div class="team-member-role">Scrum Master, Full-Stack Developer</div>
-          </div>
-          <div class="team-member col s12 m6 l4">
-            <div class="team-member-photo">
-              <img src="photos/jisoo.jpg" class="responsive-img" />
+          </a>
+          <a href="http://github.com/jyoon006">
+            <div class="team-member col s12 m6 l4">
+              <div class="team-member-photo">
+                <img src="photos/jisoo.jpg" class="responsive-img" />
+              </div>
+              <div class="team-member-name">Jisoo Yoon</div>
+              <div class="team-member-role">Full-Stack Developer</div>
             </div>
-            <div class="team-member-name">Jisoo Yoon</div>
-            <div class="team-member-role">Full-Stack Developer</div>
-          </div>
-          <div class="team-member col s12 m6 l4">
-            <div class="team-member-photo">
-              <img src="photos/calvin.png" class="responsive-img" />
+          </a>
+          <a href="http://github.com/invisiblebeard">
+            <div class="team-member col s12 m6 l4">
+              <div class="team-member-photo">
+                <img src="photos/calvin.png" class="responsive-img" />
+              </div>
+              <div class="team-member-name">Calvin Le</div>
+              <div class="team-member-role">Full-Stack Developer</div>
             </div>
-            <div class="team-member-name">Calvin Le</div>
-            <div class="team-member-role">Full-Stack Developer</div>
-          </div>
-          <div class="team-member col s12 m6 l4">
-            <div class="team-member-photo">
-              <img src="photos/neil.png" className="responsive-img" />
+          </a>
+          <a href="http://github.com/wnmurphy">
+            <div class="team-member col s12 m6 l4">
+              <div class="team-member-photo">
+                <img src="photos/neil.png" className="responsive-img" />
+              </div>
+              <div class="team-member-name">Neil Murphy</div>
+              <div class="team-member-role">Full-Stack Developer</div>
             </div>
-            <div class="team-member-name">Neil Murphy</div>
-            <div class="team-member-role">Full-Stack Developer</div>
-          </div>
+          </a>
         </div>
       </div>
 
