(chore) concating client-side files

--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,8 @@
       This app relies on JavaScript to run. If you're seeing this, it means you have JavaScript disabled. It's okay. We won't judge you. You just can't use our app!
     </div>
     <div id='nav-container' />
-    <script type="text/javascript" src="/controllers/MapController.js"></script>
+    <script type="text/javascript" src="/dist/build/min.js"></script>
+    <!-- <script type="text/javascript" src="/controllers/MapController.js"></script>
     <script type="text/javascript" src="/controllers/TimeController.js"></script>
     <script type="text/javascript" src="/controllers/LocationController.js"></script>
     <script type="text/javascript" src="/controllers/AuthController.js"></script>
@@ -55,7 +56,7 @@
     <script type="text/javascript" src="/dist/src/components/NavBar.js"></script>
     <script type="text/javascript" src="/dist/src/components/ShareCard.js"></script>
     <script type="text/javascript" src="/dist/src/components/LoginCard.js"></script>
-    <script type="text/javascript" src="/dist/src/app.js"></script>
+    <script type="text/javascript" src="/dist/src/app.js"></script> -->
 
   </body>
 </html>
