--- a/splash/index.html
+++ b/splash/index.html
@@ -21,8 +21,6 @@
     <link rel="stylesheet" href="css/splash.css">
   </head>
 
-
-
   <body>
     <main>
       <!-- banner -->
@@ -181,7 +179,7 @@
           <a href="http://github.com/wnmurphy">
             <div class="team-member col s12 m6 l4">
               <div class="team-member-photo">
-                <img src="photos/neil.png" className="responsive-img" />
+                <img src="photos/neil.png" class="responsive-img" />
               </div>
               <div class="team-member-name">Neil Murphy</div>
               <div class="team-member-role">Full-Stack Developer</div>
@@ -354,12 +352,20 @@
         <div class="footer-copyright">
           <div class="container">
             <div class="row">
-              <div class="col s6">© 2016 irl</div>
-              <div class="col s6">
+              <div class="col s4">© 2016 irl
+              </div>
+              <div class="col s4">
+                <div class="center">
+                  <a href="https://github.com/hrr12MYLTR/thesis">
+                    <img class="responsive-img" src="logos/github.png" />
+                  </a>
+                </div>
+              </div>
+              <div class="col s4">
                 <a class="modal-trigger grey-text text-lighten-4 right" href="#privacy-modal">Privacy and Terms of Service</a>
               </div>
             </div>
-           </div>
+          </div>
         </div>
       </footer>
 
@@ -422,10 +428,10 @@
         $('.parallax').parallax();
         $('.slider').slider({height: 667});
         $('.modal-trigger').leanModal({
-          dismissible: true, // Modal can be dismissed by clicking outside of the modal
-          opacity: .5, // Opacity of modal background
-          in_duration: 300, // Transition in duration
-          out_duration: 200 // Transition out duration
+          dismissible: true,
+          opacity: .5,
+          in_duration: 300,
+          out_duration: 200
         });
         makeSquares();
       });
